Fix padding, fix third color overflow

--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -66,8 +66,8 @@
             --third-color: hsl(334, 81%, 53%);
             --additional-color: hsl(10, 49%, 60%);
             --additional-color-o: hsl(19, 69%, 63%);
-            --basebg-color: hsl(334, 60%, 51%);
-            --additionalbg-color: hsl(334, 77%, 60%);
+            --basebg-color: hsl(334, 60%, 74%);
+            --additionalbg-color: hsl(334, 77%, 80%);
             --contrastbg-color: hsl(0, 0%, 13%);
         }
 
@@ -90,13 +90,13 @@
 
         &[themeMode='light'] {
             --primary-color: hsl(280, 52%, 32%);
-            --secondary-color: hsl(291, 65%, 42%);
-            --third-color: hsl(295, 49%, 64%);
+            --secondary-color: hsl(290, 60%, 38%);
+            --third-color: hsl(295, 49%, 75%);
             --additional-color: hsl(257, 52%, 52%);
             --additional-color-o: hsl(19, 69%, 63%);
-            --basebg-color: hsl(280, 52%, 35%);
-            --additionalbg-color: hsl(291, 65%, 60%);
-            --contrastbg-color: hsl(0, 0%, 13%);
+            --basebg-color: hsl(280, 52%, 55%);
+            --additionalbg-color: hsl(291, 65%, 63%);
+            --contrastbg-color: hsl(0, 0%, 10%);
         }
 
         &[themeMode='dark'] {
@@ -105,7 +105,7 @@
             --third-color: hsl(295, 49%, 56%);
             --additional-color: hsl(257, 52%, 42%);
             --additional-color-o: hsl(19, 69%, 45%);
-            --basebg-color: hsl(280, 52%, 25%);
+            --basebg-color: hsl(280, 52%, 23%);
             --additionalbg-color: hsl(291, 65%, 42%);
             --contrastbg-color: hsl(0, 0%, 100%);
         }
@@ -119,7 +119,7 @@
         &[themeMode='light'] {
             --primary-color: hsl(190, 52%, 29%);
             --secondary-color: hsl(185, 65%, 38%);
-            --third-color: hsl(181, 63%, 45%);
+            --third-color: hsl(181, 63%, 50%);
             --additional-color: hsl(164, 71%, 58%);
             --additional-color-o: hsl(19, 69%, 63%);
             --basebg-color: hsl(190, 52%, 40%);
@@ -147,10 +147,10 @@
         &[themeMode='light'] {
             --primary-color: hsl(217, 56%, 25%);
             --secondary-color: hsl(220, 56%, 30%);
-            --third-color: hsl(224, 67%, 41%);
+            --third-color: hsl(224, 67%, 67%);
             --additional-color: hsl(212, 66%, 48%);
             --additional-color-o: hsl(19, 69%, 63%);
-            --basebg-color: hsl(217, 56%, 35%);
+            --basebg-color: hsl(217, 56%, 40%);
             --additionalbg-color: hsl(220, 56%, 50%);
             --contrastbg-color: hsl(0, 0%, 13%);
         }
@@ -158,7 +158,7 @@
         &[themeMode='dark'] {
             --primary-color: hsl(217, 56%, 20%);
             --secondary-color: hsl(220, 56%, 25%);
-            --third-color: hsl(224, 67%, 34%);
+            --third-color: hsl(224, 67%, 42%);
             --additional-color: hsl(212, 66%, 42%);
             --additional-color-o: hsl(19, 69%, 45%);
             --basebg-color: hsl(217, 56%, 25%);
@@ -175,11 +175,11 @@
         &[themeMode='light'] {
             --primary-color: hsl(197, 52%, 30%);
             --secondary-color: hsl(194, 62%, 38%);
-            --third-color: hsl(193, 68%, 47%);
+            --third-color: hsl(193, 68%, 55%);
             --additional-color: hsl(184, 78%, 65%);
             --additional-color-o: hsl(19, 69%, 63%);
             --basebg-color: hsl(197, 52%, 45%);
-            --additionalbg-color: hsl(194, 62%, 38%);
+            --additionalbg-color: hsl(194, 62%, 58%);
             --contrastbg-color: hsl(0, 0%, 13%);
         }
 
@@ -203,7 +203,7 @@
         &[themeMode='light'] {
             --primary-color: hsl(204, 45%, 38%);
             --secondary-color: hsl(204, 62%, 52%);
-            --third-color: hsl(200, 82%, 63%);
+            --third-color: hsl(200, 82%, 75%);
             --additional-color: hsl(78, 66%, 66%);
             --additional-color-o: hsl(19, 69%, 63%);
             --basebg-color: hsl(204, 45%, 50%);
@@ -231,11 +231,11 @@
         &[themeMode='light'] {
             --primary-color: hsl(128, 32%, 43%);
             --secondary-color: hsl(141, 58%, 55%);
-            --third-color: hsl(135, 65%, 68%);
+            --third-color: hsl(135, 65%, 73%);
             --additional-color: hsl(81, 83%, 71%);
             --additional-color-o: hsl(19, 69%, 63%);
-            --basebg-color: hsl(128, 32%, 55%);
-            --additionalbg-color: hsl(141, 58%, 60%);
+            --basebg-color: hsl(128, 32%, 50%);
+            --additionalbg-color: hsl(141, 58%, 57%);
             --contrastbg-color: hsl(0, 0%, 13%);
         }
 
@@ -259,11 +259,11 @@
         &[themeMode='light'] {
             --primary-color: hsl(147, 40%, 40%);
             --secondary-color: hsl(148, 46%, 47%);
-            --third-color: hsl(145, 51%, 58%);
+            --third-color: hsl(145, 51%, 65%);
             --additional-color: hsl(74, 79%, 55%);
             --additional-color-o: hsl(19, 69%, 63%);
-            --basebg-color: hsl(147, 40%, 50%);
-            --additionalbg-color: hsl(148, 46%, 55%);
+            --basebg-color: hsl(147, 40%, 45%);
+            --additionalbg-color: hsl(148, 46%, 53%);
             --contrastbg-color: hsl(0, 0%, 13%);
         }
 
