--- a/src/styles/components/settings/ThemesFold.module.scss
+++ b/src/styles/components/settings/ThemesFold.module.scss
@@ -1,10 +1,10 @@
 @use '../../vars' as *;
 
 .modeContainer {
-    height: 12.5vh;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 1.6em;
 }
 
 .modeText {
@@ -23,8 +23,8 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(5, 1fr);
-    row-gap: 18pt;
-    padding-top: 24pt;
+    row-gap: 1.8em;
+    padding: 3em 0;
     justify-items: center;
 }
 
