--- a/src/styles/layout/ScrollableContainer/ScrollableContainer.module.scss
+++ b/src/styles/layout/ScrollableContainer/ScrollableContainer.module.scss
@@ -10,7 +10,8 @@
     display: flex;
     flex: 1;
     flex-direction: column;
-    padding: 10px;
+    // padding: 10px;
+    padding: 0;
     overflow-y: auto;
 }
 
